Make navbar sticky

--- a/css/general.css
+++ b/css/general.css
@@ -68,6 +68,9 @@ html {
   /* 10px / 16px = 0.625 = 62.5% */
   font-size: 62.5%;
   overflow-x: hidden;
+
+  /* Doesnt work on safari */
+  scroll-behavior: smooth;
 }
 
 body {
